# ptp_bme280

./: .gitignore  CMakeLists.txt  README.md  clean_stm32_template.ioc
Core/Inc/: bme280.h
Core/Src/: bme280.c  bme280_support.c  main.c  stm32f4xx_hal_msp.c
Drivers/: CMakeLists.txt
cmake/: arm-gcc-toolchain.cmake  constants.cmake
